{
  "version": 4,
  "terraform_version": "1.4.4",
  "serial": 83,
  "lineage": "cd860866-03ad-8d48-bcdc-5ebd68fa0092",
  "resources": [
    {
      "module": "module.gke_fw_rules",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-tag-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-04-06T10:04:46.508-07:00",
            "deny": [],
            "description": "Allow http to machines with matching tags.",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/mygkeproject-381022/global/firewalls/dev-network-ingress-tag-http",
            "log_config": [],
            "name": "dev-network-ingress-tag-http",
            "network": "https://www.googleapis.com/compute/v1/projects/mygkeproject-381022/global/networks/dev-network",
            "priority": 1000,
            "project": "mygkeproject-381022",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mygkeproject-381022/global/firewalls/dev-network-ingress-tag-http",
            "source_ranges": [
              "130.211.0.0/22",
              "209.85.152.0/22",
              "209.85.204.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.gke_fw_rules",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-tag-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-04-06T10:04:46.503-07:00",
            "deny": [],
            "description": "Allow http to machines with matching tags.",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/mygkeproject-381022/global/firewalls/dev-network-ingress-tag-https",
            "log_config": [],
            "name": "dev-network-ingress-tag-https",
            "network": "https://www.googleapis.com/compute/v1/projects/mygkeproject-381022/global/networks/dev-network",
            "priority": 1000,
            "project": "mygkeproject-381022",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mygkeproject-381022/global/firewalls/dev-network-ingress-tag-https",
            "source_ranges": [
              "130.211.0.0/22",
              "209.85.152.0/22",
              "209.85.204.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "https-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.gke_fw_rules",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-tag-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-04-06T10:04:46.474-07:00",
            "deny": [],
            "description": "Allow SSH to machines with matching tags.",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/mygkeproject-381022/global/firewalls/dev-network-ingress-tag-ssh",
            "log_config": [],
            "name": "dev-network-ingress-tag-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/mygkeproject-381022/global/networks/dev-network",
            "priority": 1000,
            "project": "mygkeproject-381022",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mygkeproject-381022/global/firewalls/dev-network-ingress-tag-ssh",
            "source_ranges": [
              "10.0.0.0/8"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ssh-default"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.gke_nat",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "DEFAULT",
                "asn": 64514,
                "keepalive_interval": 20
              }
            ],
            "creation_timestamp": "2023-04-06T09:43:43.137-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/mygkeproject-381022/regions/us-central1/routers/kube-router",
            "name": "kube-router",
            "network": "https://www.googleapis.com/compute/v1/projects/mygkeproject-381022/global/networks/dev-network",
            "project": "mygkeproject-381022",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mygkeproject-381022/regions/us-central1/routers/kube-router"
          },
          "dependencies": [
            "module.gke_vpc.data.google_compute_network.network",
            "module.gke_vpc.google_compute_global_address.psa_ranges",
            "module.gke_vpc.google_compute_network.network",
            "module.gke_vpc.google_compute_network_peering.local",
            "module.gke_vpc.google_compute_network_peering.remote",
            "module.gke_vpc.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.gke_vpc.google_compute_shared_vpc_service_project.service_projects",
            "module.gke_vpc.google_service_networking_connection.psa_connection"
          ]
        }
      ]
    },
    {
      "module": "module.gke_nat",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "mygkeproject-381022/us-central1/kube-router/kube-nat",
            "log_config": [
              {
                "enable": false,
                "filter": "ALL"
              }
            ],
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 64,
            "name": "kube-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "mygkeproject-381022",
            "region": "us-central1",
            "router": "kube-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "module.gke_nat.google_compute_router.router",
            "module.gke_vpc.data.google_compute_network.network",
            "module.gke_vpc.google_compute_global_address.psa_ranges",
            "module.gke_vpc.google_compute_network.network",
            "module.gke_vpc.google_compute_network_peering.local",
            "module.gke_vpc.google_compute_network_peering.remote",
            "module.gke_vpc.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.gke_vpc.google_compute_shared_vpc_service_project.service_projects",
            "module.gke_vpc.google_service_networking_connection.psa_connection"
          ]
        }
      ]
    },
    {
      "module": "module.gke_vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "description": "Terraform-managed.",
            "enable_ula_internal_ipv6": false,
            "id": "projects/mygkeproject-381022/global/networks/dev-network",
            "mtu": 0,
            "name": "dev-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "mygkeproject-381022",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mygkeproject-381022/global/networks/dev-network"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.gke_vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "us-central1/cluster-subnet",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-04-06T09:43:43.277-07:00",
            "description": "Terraform-managed.",
            "gateway_address": "10.50.0.1",
            "id": "projects/mygkeproject-381022/regions/us-central1/subnetworks/cluster-subnet",
            "ip_cidr_range": "10.50.0.0/16",
            "name": "cluster-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/mygkeproject-381022/global/networks/dev-network",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "mygkeproject-381022",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "172.16.0.0/20",
                "range_name": "pods"
              },
              {
                "ip_cidr_range": "192.168.0.0/24",
                "range_name": "services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/mygkeproject-381022/regions/us-central1/subnetworks/cluster-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.gke_vpc.data.google_compute_network.network",
            "module.gke_vpc.google_compute_network.network"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.jumpbox",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/beta/projects/debian-cloud/global/images/debian-11-bullseye-v20230306",
                    "size": 10,
                    "type": "pd-balanced"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/mygkeproject-381022/zones/us-central1-c/disks/jumpbox"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "description": "Managed by the compute-vm Terraform module.",
            "enable_display": false,
            "id": "projects/mygkeproject-381022/zones/us-central1-c/instances/jumpbox",
            "instance_id": "557593526741977144",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "1jyazVMiDzk=",
            "name": "jumpbox",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/mygkeproject-381022/global/networks/dev-network",
                "network_ip": "10.50.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/mygkeproject-381022/regions/us-central1/subnetworks/cluster-subnet",
                "subnetwork_project": "mygkeproject-381022"
              }
            ],
            "project": "mygkeproject-381022",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/mygkeproject-381022/zones/us-central1-c/instances/jumpbox",
            "service_account": [
              {
                "email": "jumpbox-sac@mygkeproject-381022.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-c"
          },
          "dependencies": [
            "module.gke_vpc.data.google_compute_network.network",
            "module.gke_vpc.google_compute_network.network",
            "module.gke_vpc.google_compute_network_peering.local",
            "module.gke_vpc.google_compute_network_peering.remote",
            "module.gke_vpc.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.gke_vpc.google_compute_shared_vpc_service_project.service_projects",
            "module.gke_vpc.google_compute_subnetwork.subnetwork",
            "module.gke_vpc.google_service_networking_connection.psa_connection",
            "module.jumpbox.google_compute_disk.disks",
            "module.jumpbox.google_compute_region_disk.disks",
            "module.jumpbox.google_service_account.service_account"
          ]
        }
      ]
    }
  ]
}